--- a/paper/hillclimbing.tex
+++ b/paper/hillclimbing.tex
@@ -230,7 +230,7 @@ Taking the derivative of both sides of \eqref{eq:grad} in $\boldsymbol{\lambda}$
 \end{equation}
 where $\nabla_\theta P(\theta)$ is the matrix with columns $\{\nabla_\theta P_i(\theta)\}_{i=1:J}$.
 
-We can plug \eqref{implicitDifferentiation} into \eqref{chainrule} to get $\nabla_{\boldsymbol{\lambda}} L \Big( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda})}(\boldsymbol{X}_V) \Big )$. Note that because $\frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\theta}(\boldsymbol{\lambda})$ is defined in terms of $\hat{\theta}\left(\boldsymbol{\lambda}\right)$, each gradient step requires solving the penalized regression problem on the training data. Algorithm 1 is updated with the specific calculations below:
+We can plug \eqref{implicitDifferentiation} into \eqref{chainrule} to get $\nabla_{\boldsymbol{\lambda}} L \Big( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda})}(\boldsymbol{X}_V) \Big )$. Note that because $\frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\theta}(\boldsymbol{\lambda})$ is defined in terms of $\hat{\theta}\left(\boldsymbol{\lambda}\right)$, each gradient step requires solving the penalized regression problem on the training data. Below, we present the updated version of Algorithm 1 with the specific gradient calculations:
 
 \begin{center}
   \fbox{
@@ -339,7 +339,18 @@ where
 \label{thethrm}
 \end{theorem}
 
-We can therefore construct a gradient descent procedure based on the key idea in \eqref{restrictedmodelparams}. At each iteration, we define a smooth, locally equivalent function $\tilde{\theta}(\boldsymbol{\lambda})$ and use $\frac{\partial}{\partial \boldsymbol{\lambda}} \tilde{\theta}(\boldsymbol{\lambda})$ to calculate the gradient. The gradient descent procedure is given in more detail below.
+We can therefore construct a gradient descent procedure based on the key idea in \eqref{restrictedmodelparams}. At each iteration, let matrix $U_{\boldsymbol \lambda^{(k)}}$ have orthonormal columns spanning the differentiable space of the training loss at $\boldsymbol \lambda^{(k)}$. Since the differentiable space is also a local optimal space, it is sufficient to minimize the training criterion over the column span of $U_{\boldsymbol \lambda^{(k)}}$. We formulate this locally equivalent joint optimization problem as follows:
+\begin{equation}
+\begin{array}{c}
+\min L(y_V, f_{U_{\boldsymbol \lambda^{(k)}} \tilde{\boldsymbol \theta}(\boldsymbol \lambda^{(k)})}(X_V)) \\
+\text{where } \tilde{\theta}(\boldsymbol \lambda^{(k)}) =
+\argmin_{\theta \in C \left (U_{\boldsymbol \lambda^{(k)}} \right )}
+L(y_T, f_{U_{\boldsymbol \lambda^{(k)}} \theta}(X_T))
++ \sum\limits_{i=1}^J \lambda_i P_i( U_{\boldsymbol \lambda^{(k)}} \theta)
+\end{array}
+\end{equation}
+
+This problem now reduces to the simple case where the training criterion is smooth. As mentioned previously, we can simply perform implicit differentiation on the gradient condition. Note that because the differentiable space is assumed to be locally constant, $U_{\boldsymbol \lambda^{(k)}}$ can be treated as a constant. Below, we give the descent procedure in more detail.
 
 \begin{center}
   \fbox{
@@ -349,40 +360,37 @@ We can therefore construct a gradient descent procedure based on the key idea in
         \begin{itemize}
               \item[] Solve for $\hat \theta(\boldsymbol{\lambda}^{(k)}) = \argmin_{\theta \in \mathbb{R}^p} L_T(\theta, \boldsymbol{\lambda}^{(k)})$.
               
-              \item[] Find the projection matrix $M_{\boldsymbol{\lambda}^{(k)}}$ onto $\Omega^{L_T(\cdot, \boldsymbol{\lambda})}\left (\hat{\theta}\left(\boldsymbol{\lambda}^{(k)}\right) \right )$ with rank $q$. Let $U_{\boldsymbol{\lambda}^{(k)}}$ be the $p \times q$ matrix  such that $M_{\boldsymbol{\lambda}^{(k)}} = U_{\boldsymbol{\lambda}^{(k)}} U_{\boldsymbol{\lambda}^{(k)}}^T$ and $U_{\boldsymbol{\lambda}^{(k)}}^T U_{\boldsymbol{\lambda}^{(k)}} = I_q$.
+              \item[] Construct matrix $U_{\boldsymbol{\lambda}^{(k)}}$ where its columns are the orthonormal basis of $\Omega^{L_T(\cdot, \boldsymbol{\lambda})}\left (\hat{\theta}\left(\boldsymbol{\lambda}^{(k)}\right) \right )$.
               
               \item[] Define the locally equivalent joint optimization problem
               \begin{equation}
               \begin{array}{c}
-              \min L(y_V, f_{M_{\boldsymbol \lambda^{(k)}} \tilde{\boldsymbol \theta}(\boldsymbol \lambda)}(X_V)) \\
-              \tilde{\theta}(\boldsymbol{\lambda}^{(k)}) =
-              \argmin_{\theta}
-              L(y_T, f_{M_{\boldsymbol \lambda^{(k)}} \theta}(X_T))
-              + \sum\limits_{i=1}^J \lambda_i P_i( M_{\boldsymbol \lambda^{(k)}} \theta)
+              \min L(y_V, f_{U_{\boldsymbol \lambda^{(k)}} \tilde{\boldsymbol \theta}(\boldsymbol \lambda^{(k)})}(X_V)) \\
+              \text{where } \tilde{\theta}(\boldsymbol{\lambda}^{(k)}) =
+              \argmin_{\theta \in C \left (U_{\boldsymbol \lambda^{(k)}} \right )}
+              L(y_T, f_{U_{\boldsymbol \lambda^{(k)}} \theta}(X_T))
+              + \sum\limits_{i=1}^J \lambda_i P_i( U_{\boldsymbol \lambda^{(k)}} \theta)
               \end{array}
               \end{equation}
               
-              \item[] Calculate $U_{\boldsymbol{\lambda}^{(k)}} \frac{\partial}{\partial \boldsymbol \lambda} \tilde{\theta}(\boldsymbol{\lambda})|_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where
+              \item[] Calculate $\frac{\partial}{\partial \boldsymbol \lambda} \tilde{\theta}(\boldsymbol{\lambda})|_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where
               \begin{equation}
-	      U_{\boldsymbol{\lambda}^{(k)}}^T
 	      \frac{\partial \tilde{\theta}(\boldsymbol{\lambda})}{\partial \boldsymbol \lambda} 
 		= - \left [
-		U_{\boldsymbol \lambda^{(k)}}^T
-		\nabla_{M_{\boldsymbol \lambda^{(k)}} \theta}^2 \left (
-			 L(\boldsymbol{y}_T, f_{M_{\boldsymbol \lambda^{(k)}} \theta} (\boldsymbol{X}_T))  + 
-			 \sum\limits_{i=1}^J \lambda_i P_i(M_{\boldsymbol \lambda^{(k)}} \theta)
-		\right ) U_{\boldsymbol \lambda^{(k)}}
+		\nabla_{\theta}^2 \left (
+			 L(\boldsymbol{y}_T, f_{U_{\boldsymbol \lambda^{(k)}} \theta} (\boldsymbol{X}_T))  + 
+			 \sum\limits_{i=1}^J \lambda_i P_i(U_{\boldsymbol \lambda^{(k)}} \theta)
+		\right )
 		\right ]^{-1}
-		\nabla_{M_{\boldsymbol \lambda^{(k)}} \theta} P(M_{\boldsymbol \lambda^{(k)}} \theta)
+		\nabla_\theta P(U_{\boldsymbol \lambda^{(k)}} \theta)
               \end{equation}
               
               \item[] Calculate the gradient $\nabla_{\boldsymbol{\lambda}} L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V})) |_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where
               \begin{equation}
               \nabla_{\boldsymbol{\lambda}} L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V})) =
               \left [
-              	\nabla_{M_{\boldsymbol \lambda^{(k)}} \theta} L(\boldsymbol{y_V}, f_{M_{\boldsymbol \lambda^{(k)}} \theta}(\boldsymbol{X_V}))
-              \right ]^T
-              U_{\boldsymbol{\lambda}^{(k)}} U_{\boldsymbol{\lambda}^{(k)}}^T
+              	\nabla_\theta L(\boldsymbol{y_V}, f_{U_{\boldsymbol \lambda^{(k)}} \theta}(\boldsymbol{X_V}))
+              \right ] \Big |_{\boldsymbol \theta = \tilde{\boldsymbol \theta}(\boldsymbol \lambda)}^T
               \frac{\partial}{\partial \boldsymbol \lambda} \tilde{\theta}(\boldsymbol{\lambda})
 	     \label{gradientCalculation}
               \end{equation}
@@ -399,9 +407,9 @@ We can therefore construct a gradient descent procedure based on the key idea in
 
 \subsection{Examples}
 
-To better understand the proposed gradient descent procedure, we present example joint optimization problems and their corresponding gradient calculations. We start with ridge regression where the training criterion is smooth. Then we consider the elastic net and sparse group lasso, in which the training criterion is smooth almost everywhere. Finally, we discuss doing descent-based joint optimization for an additive partial linear model, an example of a semi-parametric regression.
+To better understand the proposed gradient descent procedure, we present example joint optimization problems and their corresponding gradient calculations. We start with ridge regression where the training criterion is smooth. Then we consider the elastic net, sparse group lasso, and the generalized lasso, in which the training criterions are smooth almost everywhere. Finally, we discuss doing descent-based joint optimization for an additive partial linear model, an example of a semi-parametric regression.
 
-For reference, the differentiable space of each regression example is specified in Table \ref{table:differentiableSpace}. For ease of exposition, we will let $S_{\boldsymbol{\lambda}}$ denote the differentiable space of $L_T(\cdot, \boldsymbol{\lambda})$ at $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$.
+For reference, the differentiable space of each regression example is specified in Table \ref{table:differentiableSpace}. For ease of notation, we will let $S_{\boldsymbol{\lambda}}$ denote the differentiable space of $L_T(\cdot, \boldsymbol{\lambda})$ at $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$.
 
 \subsubsection{Ridge Regression}
 
@@ -443,7 +451,7 @@ Sparse Group Lasso & $span(\{e_i | \hat{\theta}_i\left(\boldsymbol{\lambda}\righ
 \hline
 Generalized Lasso & $\mathcal{N}(I_{I(\lambda)} D)$ where $I(\lambda) = \{ i | (D \hat{\boldsymbol{\theta}}(\lambda))^T e_i = 0 \}$ \\
 \hline
-Additive Partial Linear Model & $\mathbb{R}^{n} \oplus span(\{e_i | \hat{\beta}_i\left(\boldsymbol{\lambda}\right) \ne 0 \} \})$\\
+Additive Partial Linear Model & $span(\{e_i | \hat{\beta}_i\left(\boldsymbol{\lambda}\right) \ne 0 \} \})  \oplus  \mathbb{R}^{n}$\\
 \hline
 \end{tabular}
 \end{center}
@@ -495,27 +503,37 @@ The elastic net, a linear combination of the lasso and ridge penalties, is an ex
 \end{array}
 \end{equation}
 
-Let the nonzero indices of $\hat{\boldsymbol{\theta}}$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\boldsymbol{\theta}}_i(\boldsymbol\lambda) \ne 0\}$. Since the absolute value function is not differentiable at zero, the directional derivative of $||\boldsymbol \theta||_1$ only exists along directions spanned by the basis $B(\boldsymbol\lambda)=\{e_i | i \in I(\boldsymbol\lambda)\}$. So $S_{\boldsymbol{\lambda}}$ in this elastic net example is the span of $B(\boldsymbol\lambda)$.
-
-This joint optimization problem satisfies all three conditions in theorem \ref{thethrm}.
-To show that the first condition is satisfied, note that the nonzero indices of the regression coefficients from elastic net stay locally constant for almost every $\boldsymbol{\lambda}$. Therefore, $S_{\boldsymbol{\lambda}}$ is a local optimality space for $L_T(\cdot, \boldsymbol{\lambda})$.
-The second condition is also satisfied since the $\ell_1$ penalty is smooth when restricted to $S_{\boldsymbol{\lambda}}$.
-Finally, to check the third condition, let $\boldsymbol{X}_{T, I(\boldsymbol\lambda)}$ denote the submatrix of $\boldsymbol{X}_{T}$ consisting of columns with indices $I(\lambda)$. $\boldsymbol{X}_{V, I(\boldsymbol\lambda)}$ is defined the same but for $\boldsymbol{X}_V$. The Hessian matrix of $L_T(\cdot, \boldsymbol{\lambda})$ with respect to $B(\boldsymbol\lambda)$ is $\boldsymbol{X}_{T, I(\boldsymbol\lambda)}^T\boldsymbol{X}_{T, I(\boldsymbol\lambda)} + \lambda_2 \boldsymbol{I}$, which is always invertible.
-
-To calculate the gradient, we consider the minimization problem restricted to $S_{\boldsymbol{\lambda}}$:
+Let the nonzero indices of $\hat{\boldsymbol{\theta}}$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\boldsymbol{\theta}}_i(\boldsymbol\lambda) \ne 0\}$ and let $I_{I(\boldsymbol \lambda)}$ be a submatrix of the identity matrix with columns $I(\boldsymbol\lambda)$. Since the absolute value function is not differentiable at zero, the directional derivative of $||\boldsymbol \theta||_1$ only exists along directions spanned by the columns of $I_{I(\boldsymbol \lambda)}$. That is, the differentiable space at $\boldsymbol \lambda$ is
 \begin{equation}
-\tilde{\boldsymbol{\theta}}(\boldsymbol{\lambda}) =
-\argmin_{\boldsymbol\theta \in S_{\boldsymbol{\lambda}}}
-\frac{1}{2} ||\boldsymbol{y}_T - \boldsymbol{X}_{T} \boldsymbol{\theta}||^2_2 + \lambda_1 ||\boldsymbol{\theta}||_1 + \lambda_2 ||\boldsymbol{\theta}||_2^2
-\label{elasticnetrestricted}
+S_{\boldsymbol{\lambda}} = C(I_{I(\boldsymbol \lambda)})
 \end{equation}
 
-\eqref{elasticnetrestricted} is equivalent to the following problem:
+Next, we show that the joint optimization problem satisfies all three conditions in Theorem \ref{thethrm}.
+First, note that the nonzero indices of the regression coefficients from elastic net stay locally constant for almost every $\boldsymbol{\lambda}$. Therefore, $S_{\boldsymbol{\lambda}}$ is a local optimality space for $L_T(\cdot, \boldsymbol{\lambda})$ and the first condition is satisfied.
+The second condition is also satisfied since the $\ell_1$ penalty is smooth when restricted to $S_{\boldsymbol{\lambda}}$.
+Finally, the Hessian matrix of $L_T(\cdot, \boldsymbol{\lambda})$ with respect to the columns of $I_{I(\boldsymbol \lambda)}$ is $I_{I(\boldsymbol \lambda)}^T \boldsymbol{X}_{T}^T \boldsymbol{X}_{T} I_{I(\boldsymbol \lambda)} + \lambda_2 \boldsymbol{I}$. Since this is almost always invertible in practice, the third condition is satisfied.
+
+To calculate the gradient, we consider the locally equivalent joint optimization problem
 \begin{equation}
-\tilde{\boldsymbol{\theta}}(\boldsymbol{\lambda}) =
-\argmin_{\boldsymbol\theta}
-\frac{1}{2} ||\boldsymbol{y}_T - \boldsymbol{X}_{T, I(\boldsymbol\lambda)} \boldsymbol{\theta}||^2_2 + \lambda_1 ||\boldsymbol{\theta}||_1 + \lambda_2 ||\boldsymbol{\theta}||_2^2
-\label{elasticnetrestricted1}
+\begin{array}{c}
+\min_{\boldsymbol{\lambda} \in \mathbb{R}^2} \frac{1}{2} \lvert\lvert \boldsymbol{y}_V - \boldsymbol{X}_V \boldsymbol{I}_{I(\boldsymbol \lambda)} \tilde{\boldsymbol{\theta}} (\lambda) \rvert\rvert ^2 \\
+\text{ where }
+\tilde{\boldsymbol{\theta}} (\boldsymbol{\lambda}) = \argmin_{\boldsymbol{\theta} \in C(\boldsymbol{I}_{I(\boldsymbol \lambda)})} \frac{1}{2} \lvert\lvert \boldsymbol{y}_T - \boldsymbol{X}_T \boldsymbol{I}_{I(\boldsymbol \lambda)} \boldsymbol{\theta} \rvert\rvert ^2
++ \lambda_1 \lvert\lvert \boldsymbol{I}_{I(\boldsymbol \lambda)} \boldsymbol{\theta} \rvert \rvert_1
++ \frac{1}{2}\lambda_2 \lvert\lvert \boldsymbol{I}_{I(\boldsymbol \lambda)} \boldsymbol{\theta} \rvert \rvert_2^2
+\end{array}
+\end{equation}
+
+We can in fact simplify this further. Let $\boldsymbol{X}_{T, I(\boldsymbol\lambda)} = \boldsymbol{X}_T \boldsymbol{I}_{I(\boldsymbol \lambda)}$, which is just taking a submatrix of $\boldsymbol{X}_T$ with columns $I(\boldsymbol \lambda)$. Define $\boldsymbol{X}_{V, I(\boldsymbol\lambda)}$ similarly. The above problem simplifies to
+
+\begin{equation}
+\begin{array}{c}
+\min_{\boldsymbol{\lambda} \in \mathbb{R}^2} \frac{1}{2} \lvert\lvert \boldsymbol{y}_V - \boldsymbol{X}_{V, I(\boldsymbol \lambda)} \tilde{\boldsymbol{\theta}} (\lambda) \rvert\rvert ^2 \\
+\text{ where }
+\tilde{\boldsymbol{\theta}} (\boldsymbol{\lambda}) = \argmin_{\boldsymbol{\theta}} \frac{1}{2} \lvert\lvert \boldsymbol{y}_T - \boldsymbol{X}_{T, I(\boldsymbol \lambda)} \boldsymbol{\theta} \rvert\rvert ^2
++ \lambda_1 \lvert\lvert \boldsymbol{\theta} \rvert \rvert_1
++ \frac{1}{2}\lambda_2 \lvert\lvert \boldsymbol{\theta} \rvert \rvert_2^2
+\end{array}
 \end{equation}
 
 The joint optimization problem is now reduced to one with a smooth training criterion. We apply \eqref{implicitDifferentiation} to get
@@ -554,19 +572,26 @@ The problem setup is as follows. Given $M$ covariate groups, let $\boldsymbol{X}
 \end{array}
 \end{equation}
 
-As before, let the nonzero indices of $\hat{\boldsymbol{\theta}}$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\boldsymbol{\theta}}_i(\boldsymbol\lambda) \ne 0\}$. Since the directions for which $||\cdot||_2$ and $||\cdot||_1$ are differentiable are the same, $S_{\boldsymbol{\lambda}}$ is the space spanned by the basis $B(\boldsymbol\lambda)=\{e_i | i \in I(\boldsymbol\lambda)\}$.
-
-This problem satisfies the three conditions in theorem \ref{thethrm}. The reasoning is very similar to that in the elastic net example so we do not repeat them here.
-
-To calculate the gradient, we solve for $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$ and define the locally equivalent function $\tilde{\boldsymbol{\theta}}(\boldsymbol{\lambda})$:
+As before, let the nonzero indices of $\hat{\boldsymbol{\theta}}$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\boldsymbol{\theta}}_i(\boldsymbol\lambda) \ne 0\}$. Since the directions for which $||\cdot||_2$ and $||\cdot||_1$ are differentiable are the same, the differentiable space is spanned by the nonzero elements of $\hat{\boldsymbol\theta}$:
 \begin{equation}
+S_{\boldsymbol \lambda} = C(\boldsymbol I_{I(\boldsymbol\lambda)})
+\end{equation}
+
+This problem satisfies the three conditions in Theorem \ref{thethrm}. The reasoning is very similar to that in the elastic net example so we do not repeat them here.
+
+To calculate the gradient, we define the locally equivalent joint optimization problem, using the same notational shorthand $\boldsymbol{X}_{T, I(\boldsymbol\lambda)}, \boldsymbol{X}_{V, I(\boldsymbol\lambda)}$:
+\begin{equation}
+\begin{array}{c}
+\min_{\boldsymbol{\lambda} \in \mathbb{R}^2} \frac{1}{2n} \bigl\lvert\bigl\lvert \boldsymbol{y}_V - X_{V,I(\boldsymbol\lambda)} \hat{\boldsymbol{\theta}}(\boldsymbol{\lambda}) \bigl\rvert\bigl\rvert^2_2 \\
+\text{ where }
 \tilde{\boldsymbol{\theta}}(\boldsymbol{\lambda}) = \argmin_{\boldsymbol\theta}
 \frac{1}{2n} \bigl\lvert\bigl\lvert \boldsymbol{y}_T - \boldsymbol{X}_{T, I(\boldsymbol\lambda)} \boldsymbol{\theta} \bigl\rvert\bigl\rvert^2_2
 + \lambda_1 \sum_{m=1}^M \lvert\lvert \boldsymbol\theta^{(m)} \rvert \rvert_2
 + \lambda_2 \lvert\lvert \boldsymbol\theta \rvert \rvert_1
+\end{array}
 \end{equation}
 
-Taking the gradient of the expression above with respect to $B(\boldsymbol\lambda)$ gives us equation \eqref{eq:grad} in the context of this problem:
+Taking the gradient of the training criterion with respect to the columns in $\boldsymbol I_{I(\boldsymbol\lambda)}$ gives us:
 \begin{equation}
 -\frac{1}{n} \boldsymbol{X}_{T, I(\boldsymbol\lambda)}^T(\boldsymbol{y}_T - \boldsymbol{X}_{T, I(\boldsymbol\lambda)} \tilde{\boldsymbol\theta}(\boldsymbol \lambda))
 + \lambda_1
@@ -578,7 +603,7 @@ Taking the gradient of the expression above with respect to $B(\boldsymbol\lambd
 + \lambda_2 sgn(\tilde{\boldsymbol\theta}(\boldsymbol \lambda)) =0
 \end{equation}
 
-From \eqref{implicitDifferentiation} and the chain rule, we get the gradient of the validation loss:
+From \eqref{implicitDifferentiation} and the chain rule, we get that the gradient of the validation loss is:
 
 \begin{equation}
 \nabla_{\boldsymbol \lambda} L(\boldsymbol{y_V}, f_{\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})}(\boldsymbol{X_V})) =
@@ -604,7 +629,7 @@ From \eqref{implicitDifferentiation} and the chain rule, we get the gradient of 
 sgn(\tilde{\boldsymbol{\theta}}(\boldsymbol{\lambda}))
 \end{bmatrix}
 \end{equation}
-We define $\boldsymbol{M}_1(\boldsymbol\lambda)$ and $\boldsymbol{M}_2(\boldsymbol\lambda)$ in the Appendix.
+Matrices $\boldsymbol{M}_1(\boldsymbol\lambda)$ and $\boldsymbol{M}_2(\boldsymbol\lambda)$ are defined in the Appendix.
 
 \subsection{Generalized Lasso}
 The generalized lasso penalizes the $\ell_1$ norm of some matrix $D$ times the coefficient vector $\boldsymbol \theta$. Depending on the matrix $D$, the generalized lasso induces different structural constraints on the regression coefficients. Special cases include the fused lasso, trend filtering, and wavelet smoothing.
@@ -624,53 +649,41 @@ To tune the regularization parameters, we formulate the generalized lasso as a j
 \end{equation}
 
 Let the indices of the zero elements of $D \hat{\boldsymbol{\theta}}(\lambda)$ be denoted $I(\lambda) = \left \{i | (D \hat{\boldsymbol{\theta}}(\lambda))^T e_i = 0 \right \}$.
-Let $I_{I(\lambda)}$ be the submatrix of the $p \times p$ identity matrix $I$ consisting of columns with indices $I(\lambda)$. Since $||D \boldsymbol{\theta}||_1$ is differentiable only along directions where the zero elements of $D \boldsymbol{\theta}$ are constant, we have that
+Let $I_{I(\lambda)}$ be the submatrix of the $p \times p$ identity matrix $I$ consisting of columns with indices $I(\lambda)$. Since $||D \boldsymbol{\theta}||_1$ is differentiable only along directions where the zero elements of $D \boldsymbol{\theta}$ are constant, we have that the differentiable space is the null space of $I_{I(\lambda)}^T D$:
 \begin{equation}
 S_\lambda = \mathcal{N}(I_{I(\lambda)}^T D)
 \end{equation}
-We can show that all three conditions are satisfied in Theorem 1 using the same reasoning as before, so we do not repeat them here.
 
-Now we show how to calculate the gradient. For a given $\lambda$, we define a smooth function that is locally equivalent to $\hat{\boldsymbol\theta}(\lambda)$ by restricting the parameter space to $S_\lambda$:
+All three conditions in Theorem 1 are satisfied by the same reasoning before. One note is that in a high-dimensional, low data setting ($p \gg n$), the Hessian may not be invertible. This can be avoided by simply adding a ridge penalty with a small regularization parameter.
+
+Now we show the gradient calculations for a given $\lambda$. Let $U_\lambda$ be the matrix decomposition of the projection matrix onto $\mathcal{N}(I_{I(\lambda)}^T D)$, so
+\begin{equation}
+I - D^T I_{I(\lambda)} \left ( D^T I_{I(\lambda)} I_{I(\lambda)}^T D\right )^{-1} I_{I(\lambda)}^T D = U_\lambda U_\lambda^T
+\end{equation}
+
+Then, the locally equivalent joint optimization problem is:
 \begin{equation}
 \begin{array}{c}
-\tilde{\boldsymbol{\theta}} (\lambda) =
-\argmin_{\boldsymbol{\theta} \in \mathbb{R}^p}
-\frac{1}{2} \lvert\lvert \boldsymbol{y}_T - \boldsymbol{X}_T \boldsymbol{\theta} \rvert\rvert ^2
-+ \lambda \lvert\lvert D \boldsymbol{\theta} \rvert \rvert_1\\
-\text{where }
-I_{I(\lambda)}^T D\boldsymbol\theta = \boldsymbol 0
-\end{array}
-\label{genlassorestricted}
-\end{equation}
-Furthermore, $\tilde{\boldsymbol{\theta}} (\lambda)$ can be expressed as the solution of an unconstrained minimization problem by projecting $\boldsymbol{\theta}$ onto the null space of $I_{I(\lambda)}^T D$. Let the projection matrix onto $\mathcal{N}(I_{I(\lambda)}^T D)$ be
-\begin{equation}
-M_\lambda = I - D^T I_{I(\lambda)} \left ( D^T I_{I(\lambda)} I_{I(\lambda)}^T D\right )^{-1} I_{I(\lambda)}^T D
-\end{equation}
-Suppose the rank of $M$ is $r$. We also define $U_\lambda$ to be the decomposition matrix such that $ M_\lambda =  U_\lambda U_\lambda^T$ and $ U_\lambda^T  U_\lambda = I_r$.
-
-Then, the following joint optimization problem is locally equivalent  to \eqref{genlasso} at $\lambda$
-\begin{equation}
-\begin{array}{c}
-\min_{\lambda} \frac{1}{2} \lvert\lvert \boldsymbol{y}_V - \boldsymbol{X}_V M_\lambda \tilde{\boldsymbol{\theta}} (\lambda) \rvert\rvert ^2 \\
+\min_{\lambda} \frac{1}{2} \lvert\lvert \boldsymbol{y}_V - \boldsymbol{X}_V U_\lambda \tilde{\boldsymbol{\theta}} (\lambda) \rvert\rvert ^2 \\
 \text{ where }
 \tilde{\boldsymbol{\theta}} (\lambda) =
-\argmin_{\boldsymbol{\theta}}
-\frac{1}{2} \lvert\lvert \boldsymbol{y}_T - \boldsymbol{X}_T M_\lambda \boldsymbol{\theta} \rvert\rvert ^2
-+ \lambda \lvert\lvert D M_\lambda \boldsymbol{\theta} \rvert \rvert_1
+\argmin_{\boldsymbol{\theta} \in C(U_\lambda)}
+\frac{1}{2} \lvert\lvert \boldsymbol{y}_T - \boldsymbol{X}_T U_\lambda \boldsymbol{\theta} \rvert\rvert ^2
++ \lambda \lvert\lvert D U_\lambda \boldsymbol{\theta} \rvert \rvert_1
 \end{array}
 \label{genlassoeasy}
 \end{equation}
 
-Since the training criterion in \eqref{genlassoeasy} is differentiable with respect to $M_\lambda \boldsymbol \theta$, we have the gradient condition
+Since the training criterion in \eqref{genlassoeasy} is differentiable with respect to $\theta$, we have the gradient condition
 \begin{equation}
-- \boldsymbol{X}_T^T (\boldsymbol{y}_T - \boldsymbol{X}_T M_\lambda \boldsymbol{\theta})
-+ \lambda D^T sgn(DM_\lambda \tilde{\boldsymbol \theta}(\lambda)) = 0
+- (\boldsymbol{X}_T U_\lambda)^T (\boldsymbol{y}_T - \boldsymbol{X}_T U_\lambda \boldsymbol{\theta})
++ \lambda (D U_\lambda)^T sgn(DU_\lambda \tilde{\boldsymbol \theta}(\lambda)) = 0
 \label{genlassoGradientCondition}
 \end{equation}
 Implicit differentiation of \eqref{genlassoGradientCondition} with respect to $\lambda$ and solving for $U_\lambda^T \frac{\partial}{\partial \lambda} \tilde{\boldsymbol \theta}(\lambda)$ gives us
 \begin{equation}
-U_\lambda^T \frac{\partial}{\partial \lambda} \tilde{\boldsymbol \theta}(\lambda) =
--(U_\lambda^T X_T^T X_T U_\lambda)^{-1} U_\lambda^T D^T sgn(DM_\lambda \tilde{\boldsymbol \theta}(\lambda))
+\frac{\partial}{\partial \lambda} \tilde{\boldsymbol \theta}(\lambda) =
+-(U_\lambda^T X_T^T X_T U_\lambda)^{-1} U_\lambda^T D^T sgn(DU_\lambda \tilde{\boldsymbol \theta}(\lambda))
 \label{genlassoParamDeriv}
 \end{equation}
 
@@ -678,10 +691,10 @@ Plugging in \eqref{genlassoParamDeriv} to the chain rule gives us the gradient o
 \begin{equation}
 \nabla_{\boldsymbol \lambda} L(\boldsymbol{y_V}, f_{\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})}(\boldsymbol{X_V})) = 
 - \left (
-\boldsymbol{y}_V - \boldsymbol{X}_V M_\lambda \tilde{\boldsymbol{\theta}} (\lambda)
-\right )
+\boldsymbol{y}_V - \boldsymbol{X}_V U_\lambda \tilde{\boldsymbol{\theta}} (\lambda)
+\right )^T
 X_V U_\lambda
-U_\lambda^T \frac{\partial}{\partial \lambda} \tilde{\boldsymbol \theta}(\lambda)
+\frac{\partial}{\partial \lambda} \tilde{\boldsymbol \theta}(\lambda)
 \end{equation}
 
 
@@ -739,10 +752,22 @@ where
 \end{equation}
 Note that \eqref{aplmProblem} requires $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$ to include the nonparametric estimates for the validation set. We accomplish this by constructing $\boldsymbol{D}(\boldsymbol{z})$ from the nonlinear predictors from the training and validation sets.
 
-To find the differentiable space in this joint optimization problem, note that the training criterion is not differentiable along the dimensions where $\boldsymbol\beta$ is zero. Let the nonzero indices of $\hat{\boldsymbol{\beta}}$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\boldsymbol{\beta}}_i(\boldsymbol\lambda) \ne 0\}$. Then $S_{\boldsymbol{\lambda}}$ is $\mathbb{R}^n \oplus span(\{e_i | i \in I(\boldsymbol\lambda)\})$. By the same reasoning as before, $S_{\boldsymbol{\lambda}}$ is also a local optimality space. The rest of the conditions in Theorem 1 are also satisfied, so we can solve this problem using gradient descent.
-
-We now calculate the gradient of the validation loss at any $\boldsymbol{\lambda}$. We first solve for $\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})$ and define the locally equivalent minimization problem:
+To find the differentiable space in this joint optimization problem, note that the training criterion is not differentiable along the dimensions where $\boldsymbol\beta$ is zero. Let the nonzero indices of $\hat{\boldsymbol{\beta}}$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\boldsymbol{\beta}}_i(\boldsymbol\lambda) \ne 0\}$. Then the differentiable space is
 \begin{equation}
+S_{\boldsymbol{\lambda}} = C(\boldsymbol I_{I(\boldsymbol\lambda)}) \oplus \mathbb{R}^n
+\end{equation}
+By the same reasoning as before, $S_{\boldsymbol{\lambda}}$ is also a local optimality space. The rest of the conditions in Theorem 1 are also satisfied, so we can solve this problem using gradient descent.
+
+We now calculate the gradient of the validation loss at any $\boldsymbol{\lambda}$. We first solve for $\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})$. The locally equivalent joint optimization problem is:
+\begin{equation}
+\begin{array}{c}
+\min_{\boldsymbol\lambda \in \mathbb{R}^2} \frac{1}{2}
+\bigl\lvert\bigl\lvert
+\boldsymbol{y}_V
+- \boldsymbol{X}_{V, I(\boldsymbol \lambda)} \hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})
+- (\boldsymbol{I} - \boldsymbol{M}) \hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})
+\bigl\rvert\bigl\rvert^2_2 \\
+\text{ where }
 \tilde{\boldsymbol{\beta}}(\boldsymbol{\lambda}),
 \tilde{\boldsymbol{\theta}}(\boldsymbol{\lambda}) =
 \argmin_{\boldsymbol\beta, \boldsymbol{\theta}}
@@ -753,24 +778,11 @@ We now calculate the gradient of the validation loss at any $\boldsymbol{\lambda
 + \lambda_1 \lvert\lvert \boldsymbol{\beta}
 \rvert \rvert_1
 + \frac{1}{2} \lambda_2 \lvert\lvert \boldsymbol{D}(\boldsymbol{z}) \boldsymbol{\theta} \rvert \rvert_2^2
+\end{array}
 \label{aplmRestricted}
 \end{equation}
 
-Since the training criterion is now smooth, we can differentiate the gradient condition of \eqref{aplmRestricted} and solve for $\frac{\partial}{\partial \boldsymbol \lambda} \tilde{\boldsymbol\beta}(\boldsymbol{\lambda}) $ and $\frac{\partial}{\partial \boldsymbol \lambda} \tilde{\boldsymbol\theta}(\boldsymbol{\lambda}) $. The gradient of the validation loss is
-\begin{equation*}
-\nabla_\lambda L_V(\boldsymbol{\lambda})_i =
-- \bigg(
-\boldsymbol{X}_{V, I(\boldsymbol\lambda)} \frac{\partial \tilde{\boldsymbol\beta}(\boldsymbol{\lambda})}{\partial \lambda_i}
-+ (\boldsymbol I - \boldsymbol{M}) \frac{\partial \tilde{\boldsymbol\theta}(\boldsymbol{\lambda})}{\partial \lambda_i}
-\bigg )^T
-\bigg (
-\boldsymbol{y}_V
-- \boldsymbol{X}_{V, I(\boldsymbol\lambda)} \tilde{\boldsymbol\beta}(\boldsymbol{\lambda})
-- (\boldsymbol I - \boldsymbol{M}) \tilde{\boldsymbol\theta}(\boldsymbol{\lambda})
-\bigg )
-\text{ for } i = 1,2 
-\end{equation*}
-where the partial derivatives are
+Since this training criterion is smooth, we can perform implicit differentiation on the gradient condition and solve for $\frac{\partial}{\partial \boldsymbol \lambda} \tilde{\boldsymbol\beta}(\boldsymbol{\lambda}) $ and $\frac{\partial}{\partial \boldsymbol \lambda} \tilde{\boldsymbol\theta}(\boldsymbol{\lambda}) $: 
 \begin{equation*}
 \begin{array}{lcl}
 \frac{\partial}{\partial \lambda_1} \tilde{\boldsymbol\beta}(\boldsymbol{\lambda})  &=&
@@ -795,6 +807,20 @@ sgn( \tilde{\boldsymbol\beta}(\boldsymbol{\lambda})) \\
 \end{array}
 \end{equation*}
 
+By the chain rule, the gradient of the validation loss is
+\begin{equation*}
+\frac{\partial}{\partial \lambda_i} L_V(\boldsymbol{\lambda}) =
+- \bigg(
+\boldsymbol{X}_{V, I(\boldsymbol\lambda)} \frac{\partial \tilde{\boldsymbol\beta}(\boldsymbol{\lambda})}{\partial \lambda_i}
++ (\boldsymbol I - \boldsymbol{M}) \frac{\partial \tilde{\boldsymbol\theta}(\boldsymbol{\lambda})}{\partial \lambda_i}
+\bigg )^T
+\bigg (
+\boldsymbol{y}_V
+- \boldsymbol{X}_{V, I(\boldsymbol\lambda)} \tilde{\boldsymbol\beta}(\boldsymbol{\lambda})
+- (\boldsymbol I - \boldsymbol{M}) \tilde{\boldsymbol\theta}(\boldsymbol{\lambda})
+\bigg )
+\text{ for } i = 1,2 
+\end{equation*}
 
 \section{Results: validation error minimization}
 
